--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,17 @@
 ---
-title: "<br><center>Dallas Data Science Collection</center>"
+title: "Dallas Data Science Collection"
 output: 
   html_document:
     highlight: textmate
     theme: lumen
 ---
+
+<style type="text/css">
+h1.title {
+  text-align: center;
+  margin-top: 1em;
+}
+</style>
 
 ```{r, include = F}
 knitr::opts_chunk$set(dev = 'svg')
@@ -18,7 +25,7 @@ xfun::pkg_attach2(packages, message = F)
 ```{r, echo=F}
 tribble(~"Title", ~"Author(s)", ~"Type", ~"Link",
         "Git & GitHub Tutorial for Scientists:
-It’s Not Only for Programmers", "Michaela Chan & Ekarin Pongpipat", "eBook", "https://gitbookdown.dallasdatascience.com/") %>%
+It’s Not Only for Programmers", "Micaela Chan & Ekarin Pongpipat", "eBook", "https://gitbookdown.dallasdatascience.com/") %>%
   kable() %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
 ```
